recursion.cons.min.Min.scala.error
Compilation error:
Min:2: error: an expression of type Null is ineligible for implicit conversion
val record: Int = null
                  ^Min:2: error: type mismatch;
 found   : Null(null)
 required: Int
val record: Int = null
                  ^Min:6: error: reassignment to val
    record=l.head
          ^