recursion.cons.min.Min.scala.code
val record: Int = null
def min(l:List[Int]): Int = {
	if (l==Nil) record
  if (l.head<record) {
    record=l.head
  }
  min(l.tail)
}